# epanet-python

./: .gitignore  .gitmodules  README.md
.github/workflows/: python-package.yml
epanet-toolkit/: CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  build-requirements.txt  pyproject.toml  setup.py  test-requirements.txt
epanet-toolkit/.github/workflows/: python-package.yml
epanet-toolkit/docs/: conf.py  index.rst
epanet-toolkit/docs/apidoc/: epanet.rst  epanet.toolkit.output.rst  epanet.toolkit.rst  epanet.toolkit.solver.rst
epanet-toolkit/epanet/: __init__.py
epanet-toolkit/epanet/output/: CMakeLists.txt  __init__.py  output.i
epanet-toolkit/epanet/solver/: CMakeLists.txt  __init__.py  solver.i
epanet-toolkit/src/epanet/output/: CMakeLists.txt  __init__.py  output.i  output_enum.py  rename.i
epanet-toolkit/src/epanet/solver/: CMakeLists.txt  rename.i  solver.i  solver_enum.py
epanet-toolkit/src/epanet/toolkit/: CMakeLists.txt  __init__.py  output.i  output_enum.py  output_metadata.py  output_rename.i  solver.i  solver_enum.py  solver_rename.i
epanet-toolkit/tests/: test_metadata.py  test_output.py  test_solver.py
epanet-toolkit/tools/: build-wheels.sh
epanet_python/output/tests/: test_output.py
nrtest-epanet/: main.py  setup.py
nrtest-epanet/nrtest_epanet/: __init__.py  output_reader.py
nrtest-epanet/scripts/: report-diff
